avoid gaps between cell rows

--- a/waznexserver/static/css/main.css
+++ b/waznexserver/static/css/main.css
@@ -72,25 +72,15 @@ div.cell-row {
     display: flex;
 }
 
-div.cells a, div.cell-row a {
-    text-decoration: none;
-}
-
 img.cell {
-    display: inline-block;
     width: 100%;
-    margin: 0 -2px;
-    text-decoration: none;
+    height: 100%; /* may distort aspect ratio, but avoids black gaps between rows */
 }
 
 img.cell:hover {
     border: solid 1px black;
     margin: -3px;
-    -webkit-transform: scale(1.5);
-    -moz-transform:    scale(1.5);
-    -ms-transform:     scale(1.5);
-    -o-transform:      scale(1.5);
-    transform:         scale(1.5);
+    transform: scale(1.5);
 }
 
 div.cells {
@@ -160,9 +150,6 @@ form#lnk-mark-bad {
     h2 {
        font-size: 1.2em;
     }
-    div.grid-image-div {
-        zoom: 200%;
-    }
     .button-like {
         font-size: 1.1em;
         margin: 0 0.25em 0 0.25em;
@@ -174,21 +161,4 @@ form#lnk-mark-bad {
     }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-width: 980px) and (min-height: 740px) {
-    div.grid-image-div {
-        zoom: 300%;
-    }
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-width: 1300px) and (min-height: 935px) {
-    div.grid-image-div {
-        zoom: 400%;
-    }
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-width: 1681px) and (min-height: 1140px) { 
-    div.grid-image-div {
-        zoom: 500%;
-    }
-}
 
